# ai-usecases

./: .gitignore
.github/workflows/: ai-tax-server-acr-release-img.yaml
ai-hris/client/: .env.example  Dockerfile  nuxt.config.ts  package-lock.json  package.json
ai-hris/server/: .env.example  Dockerfile  docker-compose.yml  insert_candidate_data.sql  insert_dummy_candidates.py  main.py  postman_collection_hr.json  requirements.txt
ai-investigation-system/client/: .dockerignore  Dockerfile  docker-compose.yml  nuxt.config.ts  package-lock.json  package.json
ai-investigation-system/server/: .env.example  Dockerfile  docker-compose.yml  (+3 more)
ai-tax-management-system/: README.md
ai-tax-management-system/server/: Dockerfile  docker-compose.yml  main.py  postman_collection.json  pyproject.toml
ai-tax-management-system/server/src/common/: const.py
ai-tax-management-system/server/src/config/: dependencies.py  env.py
ai-tax-management-system/server/src/delivery/: routes.py  status_routes.py  tax_management.py  upload_routes.py
ai-tax-management-system/server/src/domain/: check_status.py  document.py  file_upload.py  gl_transaction.py  invoice.py  tax_invoice.py
ai-tax-management-system/server/src/repository/: content_understanding.py  database.py  messaging.py  storage.py
ai-tax-management-system/server/src/repository/llm/: llm_service.py
ai-tax-management-system/server/src/repository/prompt/: content_extraction.py
ai-tax-management-system/server/src/usecase/: content_extraction.py  file_upload.py  tax_management.py
workflows/: client-acr-release-img.yaml
(+169 files in other folders)
