[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-ai-documentintelligence>=1.0.2",
    "fastapi>=0.124.4",
    "loguru>=0.7.3",
    "python-multipart>=0.0.20",
    "semantic-kernel>=1.36.0",
    "uvicorn>=0.38.0",
]
